JIRA Addon #3943: Try to fix auto-resize "jumping" glitches (v2)

--- a/app/jekyll/roadmap-jira-addon/css/roadmap-issue.css
+++ b/app/jekyll/roadmap-jira-addon/css/roadmap-issue.css
@@ -9,7 +9,7 @@ body {
     background: transparent;
 }
 
-.ac-content {
+#content {
     padding: 1px 0;
 }
 
